Fixed vertical align and changed style + added new nodes

--- a/css/main.css
+++ b/css/main.css
@@ -114,12 +114,15 @@ body {
 
 .poi-box {
   opacity: 0;
+  border: 1px #000 dashed;
   pointer-events: none;
   position: fixed;
   top: 5%; left: 5%;
   width: 40%;
   height: 10%;
   padding: 1%;
+  background-color: rgba(205,209,196,0.9);
+	z-index: 2;
 }
 
 .poi-name {
